esplora redesign and update

--- a/flavors/blockstream/config.env
+++ b/flavors/blockstream/config.env
@@ -43,3 +43,9 @@ export NAVBAR_HTML=1
 
 export TERMS="https://blockstream.com/terms/"
 export PRIVACY="https://blockstream.com/privacy/"
+
+
+export ABOUT_BC_E="About Bitcoin Esplora"
+export ABOUT_BC_E_TEXT="Our block explorer allows users to search and view specific data that is published in real-time to the Bitcoin blockchain and the Liquid sidechain. As a Bitcoin explorer, it offers many new features compared to existing block explorer choices - the information it presents is drawn from an up to date Bitcoin Core full node, as well as natively supporting SegWit, bech32, and other modern Bitcoin features. The Blockstream Explorer is intended to be easy to use for the casual user, but will increasingly pack some powerful features under the hood for developers. Read more about <a href="https://medium.com/shapeshift-stories/whats-the-deal-with-block-explorers-9fcdb161e788">Block Explorers</a>"
+export BC_PROOF_OF_CONCEPT="This site is a proof-of-concept. It is intended to demonstrate the <a href="https://github.com/BlockchainCommons/Gordian#gordian-principles">Principles</a> of the <a href="https://github.com/BlockchainCommons/Gordian/blob/master/README.md">Gordian Architecture</a>. Use at your own risk. For more info on this site, please see its repo. For more info on Blockchain Commons, please see our <a href="https://www.blockchaincommons.com/">main web page</a>. If you'd like to become a sponsor of work like this, please visit our <a href="https://github.com/sponsors/BlockchainCommons">Sponsors Page</a>."
+
